--- a/css/main.css
+++ b/css/main.css
@@ -102,7 +102,7 @@ textarea {
 
 body{
     background: url(../img/cole-patrick-1027-unsplash.jpg) no-repeat fixed center center #333;
-    background-size: 100%;
+    background-size: 80em;
 
 }
 
@@ -337,8 +337,8 @@ a.right .glyphicon-chevron-right {
     color: #6b6b6b; 
     background-color: #ffffff;
     text-align: center;
-    font-size: 17px;
-    width: 1007px;
+    font-size: 1.207em;
+    width: 59.6em;
     height: 280px;
 
 }
@@ -347,7 +347,7 @@ a.right .glyphicon-chevron-right {
 .contenedor{
     display: flex;
     position: relative;
-    width: 750px;
+    width: 25;
     height: 40px;
     font-size: 30px;
     left: 150px;
@@ -431,14 +431,14 @@ a.right .glyphicon-chevron-right {
     background-size: cover;
     margin: 0px;
     padding-right: -0px;
-    width: 110%;
-    height: 1000px;
+    width: 100px 300px;
+    height: 950px;
     position: absolute;
 }
 
 
 .head-horario{
-    width: 1015px;
+    width: 71.96em;
     margin-left: -15px;
     position: relative;
     top: -20px;
@@ -466,6 +466,26 @@ h3.text-center{
     font-size: 18px;
 }
 
+.img-circle_img-responsive{
+    width: 13.32em;
+    border-radius: inherit;
+}
+
+.timeline,
+.subheading p{
+    background: rgba(102,102,102,1);
+background: -moz-radial-gradient(center, ellipse cover, rgba(102,102,102,1) 0%, rgba(89,89,89,0.93) 21%, rgba(76,76,76,0.87) 38%, rgba(71,71,71,0.86) 41%, rgba(44,44,44,0.81) 55%, rgba(43,43,43,0.81) 57%, rgba(28,28,28,0.76) 70%, rgba(19,19,19,0.72) 81%, rgba(17,17,17,0.68) 93%, rgba(0,0,0,0.66) 100%);
+background: -webkit-gradient(radial, center center, 0px, center center, 100%, color-stop(0%, rgba(102,102,102,1)), color-stop(21%, rgba(89,89,89,0.93)), color-stop(38%, rgba(76,76,76,0.87)), color-stop(41%, rgba(71,71,71,0.86)), color-stop(55%, rgba(44,44,44,0.81)), color-stop(57%, rgba(43,43,43,0.81)), color-stop(70%, rgba(28,28,28,0.76)), color-stop(81%, rgba(19,19,19,0.72)), color-stop(93%, rgba(17,17,17,0.68)), color-stop(100%, rgba(0,0,0,0.66)));
+background: -webkit-radial-gradient(center, ellipse cover, rgba(102,102,102,1) 0%, rgba(89,89,89,0.93) 21%, rgba(76,76,76,0.87) 38%, rgba(71,71,71,0.86) 41%, rgba(44,44,44,0.81) 55%, rgba(43,43,43,0.81) 57%, rgba(28,28,28,0.76) 70%, rgba(19,19,19,0.72) 81%, rgba(17,17,17,0.68) 93%, rgba(0,0,0,0.66) 100%);
+background: -o-radial-gradient(center, ellipse cover, rgba(102,102,102,1) 0%, rgba(89,89,89,0.93) 21%, rgba(76,76,76,0.87) 38%, rgba(71,71,71,0.86) 41%, rgba(44,44,44,0.81) 55%, rgba(43,43,43,0.81) 57%, rgba(28,28,28,0.76) 70%, rgba(19,19,19,0.72) 81%, rgba(17,17,17,0.68) 93%, rgba(0,0,0,0.66) 100%);
+background: -ms-radial-gradient(center, ellipse cover, rgba(102,102,102,1) 0%, rgba(89,89,89,0.93) 21%, rgba(76,76,76,0.87) 38%, rgba(71,71,71,0.86) 41%, rgba(44,44,44,0.81) 55%, rgba(43,43,43,0.81) 57%, rgba(28,28,28,0.76) 70%, rgba(19,19,19,0.72) 81%, rgba(17,17,17,0.68) 93%, rgba(0,0,0,0.66) 100%);
+background: radial-gradient(ellipse at center, rgba(102,102,102,1) 0%, rgba(89,89,89,0.93) 21%, rgba(76,76,76,0.87) 38%, rgba(71,71,71,0.86) 41%, rgba(44,44,44,0.81) 55%, rgba(43,43,43,0.81) 57%, rgba(28,28,28,0.76) 70%, rgba(19,19,19,0.72) 81%, rgba(17,17,17,0.68) 93%, rgba(0,0,0,0.66) 100%);
+filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#666666', endColorstr='#000000', GradientType=1 );
+
+; 
+border-radius: 40px;
+height: 700px;
+}
 
 .timeline {
     position: relative;
@@ -622,14 +642,17 @@ h3.text-center{
 /* Medium Devices, .visible-md-* */
 @media (min-width: 992px) and (max-width: 1199px) {
   .timeline > li:nth-child(even) {
-    margin-bottom: 0px;
+    margin-bottom: 50px;
     min-height: 0px;
-    right: 0px;
+    right: -45px;
+    width: 900px;
+    top:80px;
   }
   .timeline > li:nth-child(odd) {
-    margin-bottom: 0px;
+    margin-bottom: -5px;
     min-height: 0px;
-    left: 0px;
+    left: 30px;
+    top: 30px;
   }
   .timeline>li:nth-child(even) .timeline-image {
     left: 0;
@@ -656,7 +679,7 @@ h3.text-center{
 /* Small Devices, Tablets */
 @media (min-width: 768px) and (max-width: 991px) {
   .timeline > li:nth-child(even) {
-    margin-bottom: 0px;
+    margin-bottom: 50px;
     min-height: 0px;
     right: 0px;
   }
@@ -743,6 +766,7 @@ h3.text-center{
     bottom: 0px;
     height: 60px;
     top: 930px;
+    width: 50.33em;
 }
 
 .pie h3{
